--- a/src/app/screen/screen.component.html
+++ b/src/app/screen/screen.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="terminal" [ngSwitch]="selection.value"> -->
 <div class="terminal">   
-    <span id="result" class="screen">1 + 9 =</span>
-    <span id="input" class="screen">10</span>
+    <span id="secondary" class="screen">1 + 9 =</span>
+    <span id="primary" class="screen">10</span>
 </div>
