starting with functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,8 +15,8 @@
   
   <!-- Calculator -->
   <div>
-    <calculator-screen></calculator-screen>
-    <calculator-keyboard></calculator-keyboard>
+    <calculator-screen [keyPressed]="key"></calculator-screen>
+    <calculator-keyboard (key)="received($event)"></calculator-keyboard>
   </div>
   <!-- Background  -->
   <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
