--- a/src/app/keyboard/keyboard.component.css
+++ b/src/app/keyboard/keyboard.component.css
@@ -1,7 +1,7 @@
 
 .keyboard-container{
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(4, auto);
     width: 450px;
 }
 
